--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^1.150.7",
+    "framer-motion": "^3.2.1",
     "next": "10.0.5",
+    "next-sanity": "^0.1.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
